compiler/src/test/resources/amyc/nameAnalyzer/failing/UnknownParent.amy
module Parent
  case class Foo() : Bar
end Parent
